--- a/Html/createAccountWindow.html
+++ b/Html/createAccountWindow.html
@@ -21,12 +21,12 @@
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
-            <button type="submit" class="btn btn-primary">Create account</button>
+            <a href="#" class="btn btn-primary">Create account</a>
           </form>
     </div>
 
     <div class="button-log-in-back" role="group" aria-label="First group">
-        <button type="button" class="btn btn-secondary">Back</button>
+      <a href="/Html/index.html" class="btn btn-primary">Back</a>
     </div>
 
     <div class="logo"></div>
