--- a/Html/index.html
+++ b/Html/index.html
@@ -14,8 +14,8 @@
     </div>
 
     <div class="buttons" role="group" aria-label="First group">
-        <button type="button" class="btn btn-secondary">Create account</button>
-        <button type="button" class="btn btn-secondary">Log in</button>
+        <a href="/Html/createAccountWindow.html" class="btn btn-primary">Create account</a>
+        <a href="/Html/logInWindow.html" class="btn btn-primary">Log in</a>
     </div>
 
     <div class="logo"></div>
