--- a/Html/createAccountWindowUsernameInvalid.html
+++ b/Html/createAccountWindowUsernameInvalid.html
@@ -21,13 +21,13 @@
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
-            <a href="#" class="btn btn-primary">Create account</a>
+            <input type="button" value="Create account">
           </form>
           <div class="error-messege"><p>The username has been already taked</p></div>
     </div>
 
     <div class="button-log-in-back" role="group" aria-label="First group">
-      <a href="/Html/index.html" class="btn btn-primary">Back</a>
+      <input type="button" value="Back">
     </div>
 
     <div class="logo"></div>
