--- a/Html/home.html
+++ b/Html/home.html
@@ -12,17 +12,28 @@
     <div class="background"></div>
     
     <div class="button-log-out" role="group" aria-label="First group">
-        <a href="/Html/index.html" class="btn btn-primary">Log out</a>
+        <input type="button" value="Log out">
       </div>
     
     <div class="glass"></div>
 
     <div class="buttons-notes">
-        <a href="#" class="btn btn-primary">Create a new note</a>
+        <input type="button" value="Create a new note">
     </div>
 
     <div class="logo"></div>
+
     <div class="calculator-image"></div>
+
+    <div class="quadratic-button">
+        <input type="button" value="Quadratic calculator">
+    </div>
+
+    <div class="gcd-botton">
+        <input type="button" value="GCD calculator">
+    </div>
+
+    <div class="username"></div>
 
 </body>
 </html>
