--- a/Html/index.html
+++ b/Html/index.html
@@ -14,8 +14,8 @@
     </div>
 
     <div class="buttons" role="group" aria-label="First group">
-        <a href="/Html/createAccountWindow.html" class="btn btn-primary">Create account</a>
-        <a href="/Html/logInWindow.html" class="btn btn-primary">Log in</a>
+        <input type="button" value="Create account">
+        <input type="button" value="Log in">
     </div>
 
     <div class="logo"></div>
