--- a/Html/logInWindow.html
+++ b/Html/logInWindow.html
@@ -21,12 +21,12 @@
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
-            <a href="#" class="btn btn-primary">Log in</a>
+            <input type="button" value="Log in">
           </form>
     </div>
 
     <div class="button-log-in-back" role="group" aria-label="First group">
-        <a href="/Html/index.html" class="btn btn-primary">Back</a>
+        <input type="button" value="Back">
     </div>
 
     <div class="logo"></div>
