--- a/Html/createANewNote.html
+++ b/Html/createANewNote.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>πie</title>
+    <title>Create a new note</title>
     <link rel="icon" href="/Images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/Css/style.css">
@@ -18,20 +18,20 @@
     <div class="glass"></div>
 
     <div class="button-notes">
-        <input type="button" value="Create a new note">
+        <input type="button" value="Save">
     </div>
 
     <div class="logo"></div>
 
-    <div class="calculator-image"></div>
-
-    <div class="quadratic-button">
-        <input type="button" value="Quadratic calculator">
+    <div class="instructions-note">
+        <p>Please enter a name and content for the note</p>
     </div>
 
-    <div class="gcd-botton">
-        <input type="button" value="GCD calculator">
-    </div>
+
+    <input type="text" placeholder="Note name" class="note-name">
+
+    <textarea class="note"  rows="10" cols="50" placeholder="Note"></textarea>
+
 
     <div class="username"></div>
 
