--- a/Html/createAccountWindowUsernameInvalid.html
+++ b/Html/createAccountWindowUsernameInvalid.html
@@ -15,7 +15,7 @@
         <form>
             <div class="form-group">
               <label for="exampleInputEmail1">Username</label>
-              <input type="Username" class="form-control" id="" aria-describedby="" placeholder="Username">
+              <input type="Username" class="form-control" id="username-label" aria-describedby="" placeholder="Username">
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
