--- a/Html/logging.html
+++ b/Html/logging.html
@@ -18,25 +18,22 @@
     <form>
       <div class="form-group">
         <label for="exampleInputEmail1">Username</label>
-        <input type="Username" class="form-control" id="" aria-describedby="" placeholder="Username">
+        <input type="text" name="Username" id="username" value="">
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input type="password" name="Password" id="password" value="">
       </div>
-      <input type="button" value="Log in">
-      <div class="error-messege">
-        <p>The username is invalid</p>
-      </div>
+      <input id="logging-button" type="button" value="Log in">
     </form>
   </div>
-
-  <div class="button-log-in-back" role="group" aria-label="First group">
+  <div id="back-button" class="button-log-in-back" role="group" aria-label="First group">
     <input type="button" value="Back">
   </div>
 
   <div class="logo"></div>
 
+  <script src="/js/logging.js"> </script>
 
 </body>
 
