--- a/html/logging.html
+++ b/html/logging.html
@@ -17,11 +17,11 @@
   <div class="about-us">
     <form>
       <div class="form-group">
-        <label for="exampleInputEmail1">Username</label>
+        <label for="username">Username</label>
         <input type="text" name="Username" id="username" value="">
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
+        <label for="password">Password</label>
         <input type="password" name="Password" id="password" value="">
       </div>
       <input id="logging-button" type="button" value="Log in">
