--- a/html/home.html
+++ b/html/home.html
@@ -13,7 +13,7 @@
 <div class="background"></div>
 
 
-<button class="button-log-out" role="group">
+<button class="button-log-out" role="group" id="logout-button">
     Log out
 </button>
 
@@ -35,7 +35,9 @@
     <input type="button" value="GCD calculator">
 </div>
 
-<div class="username"></div>
+<div class="username" >
+    <p id ="username-container"></p>
+</div>
 <script src="/js/home.js"></script>
 </body>
 </html>
