--- a/html/invalid-logging.html
+++ b/html/invalid-logging.html
@@ -25,7 +25,7 @@
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
       </div>
       <input type="button" value="Log in">
-      <div class="error-messege">
+      <div class="error-message">
         <p>The username is invalid</p>
       </div>
     </form>
