--- a/html/index.html
+++ b/html/index.html
@@ -7,24 +7,31 @@
     <title>Welcome to π1e</title>
     <link rel="icon" href="/Images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/Css/style.css">
 </head>
 
 <body>
-    <div class="background"></div>
-    <div class="about-us">
-        <h1>Welcome to π1e</h1>
-        <p>π1e is an interactive and educative platform. π1e helps you organize your ideas</p>
-    </div>
+<div class="navigation-button-container">
+    <button class="primary-button" id="register-button">
+        Create Account
+    </button>
 
-    <div class="buttons" role="group" aria-label="First group">
-        <input id="register-button" type="button" value="Create account">
-        <input id="logging-button" type="button" value="Log in">
-    </div>
+    <button class="primary-button" id="logging-button">
+        Logging
+    </button>
+</div>
 
-    <div class="logo"></div>
-    <script src="/js/index.js"></script>
+<div class="background"></div>
+<div class="about-us">
+    <h1>Welcome to π1e</h1>
+    <p>π1e is an interactive and educative platform. π1e helps you organize your ideas</p>
+</div>
+
+
+
+<div class="logo"></div>
+<script src="/js/index.js"></script>
 
 </body>
 
