--- a/html/register.html
+++ b/html/register.html
@@ -16,19 +16,25 @@
     <form>
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" name="username" id="username" value="">
+            <input class="input-label" type="text" name="username" id="username" value="">
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password" value="">
+            <input class="input-label" type="password" name="password" id="password" value="">
         </div>
-        <input type="button" id="register-button" value="Create account">
+        <button class="primary-button" id="register-button">
+            Create Account
+        </button>
     </form>
 </div>
 
-<div id="back-button" class="button-log-in-back" role="group" aria-label="First group">
-    <input type="button" value="Back">
+
+<div class="navigation-button-container">
+    <button class="primary-button" id="back-button">
+        Back
+    </button>
 </div>
+
 
 <div class="logo"></div>
 
