--- a/html/logging.html
+++ b/html/logging.html
@@ -2,38 +2,45 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Log in</title>
-  <link rel="icon" href="/Images/logo.png" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="/Css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Log in</title>
+    <link rel="icon" href="/Images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/Css/style.css">
 </head>
 
 <body>
-  <div class="background"></div>
+<div class="background"></div>
 
-  <div class="about-us">
+<div class="about-us">
     <form>
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" name="Username" id="username" value="">
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" name="Password" id="password" value="">
-      </div>
-      <input id="logging-button" type="button" value="Log in">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input class="input-label" type="text" name="Username" id="username" value="">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input class="input-label" type="password" name="Password" id="password" value="">
+        </div>
+        <button class="primary-button" id="logging-button">
+            Logging
+        </button>
     </form>
-  </div>
-  <div id="back-button" class="button-log-in-back" role="group" aria-label="First group">
-    <input type="button" value="Back">
-  </div>
+</div>
 
-  <div class="logo"></div>
+<div class="navigation-button-container">
+    <button class="primary-button" id="back-button">
+        Back
+    </button>
+</div>
 
-  <script src="/js/logging.js"> </script>
+
+
+<div class="logo"></div>
+
+<script src="/js/logging.js"></script>
 
 </body>
 
