--- a/html/invalid-username-register.html
+++ b/html/invalid-username-register.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create account</title>
     <link rel="icon" href="/Images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/Css/style.css">
 </head>
+
 <body>
-<div class="background"></div>
+    <div class="background"></div>
 
-<div class="about-us">
-    <form>
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username" value="">
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" value="">
-        </div>
-        <input type="button" id="register-button" value="Create account">
-    </form>
-    <div class="error-message"><p>The username has been already in use</p></div>
-</div>
 
-<div id="back-button" class="button-log-in-back" role="group" aria-label="First group">
-    <input type="button" value="Back">
-</div>
+    <div class="about-us">
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Username</label>
+                <input type="Username" class="form-control" id="" aria-describedby="" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
 
-<div class="logo"></div>
-<script src="/js/register.js"></script>
+            <button class="primary-button" id="register-button">
+                Register
+            </button>
+            
+
+            <div class="error-message">
+                <p>The username is already taken</p>
+            </div>
+        </form>
+    </div>
+
+    <div class="navigation-button-container">
+        <button class="primary-button" id="back-button">
+            Back
+        </button>
+    </div>
+
+
+    <div class="logo"></div>
+    <script src="/js/register.js"></script>
 
 </body>
+
 </html>
